@@ -419,13 +419,13 @@ argument_list|)
 decl_stmt|;
 name|assertTrue
 argument_list|(
-name|TestDatanodeBlockScanner
+name|cluster
 operator|.
 name|corruptReplica
 argument_list|(
-name|block
-argument_list|,
 literal|0
+argument_list|,
+name|block
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -680,13 +680,13 @@ argument_list|)
 decl_stmt|;
 name|assertTrue
 argument_list|(
-name|TestDatanodeBlockScanner
+name|cluster
 operator|.
 name|corruptReplica
 argument_list|(
-name|replOneBlock
-argument_list|,
 literal|0
+argument_list|,
+name|replOneBlock
 argument_list|)
 argument_list|)
 expr_stmt|;
