@@ -1205,7 +1205,7 @@ argument_list|)
 decl_stmt|;
 name|assertTrue
 argument_list|(
-name|MiniDFSCluster
+name|cluster
 operator|.
 name|corruptReplica
 argument_list|(
